[package]
name = "lwip_tcp_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]  # Build as static library for C

[dependencies]
# No external dependencies - keeping it minimal

[build-dependencies]
bindgen = "0.69"  # Generate Rust bindings from C headers

[profile.release]
opt-level = "z"           # Optimize for size
lto = true                # Link-time optimization
codegen-units = 1         # Better optimization
panic = "abort"           # No unwinding overhead
strip = "symbols"         # Strip debug symbols
